2010-02-12  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-tweets): Add optional
	argument `since_id'.
	(twittering-get-and-render-timeline): Adjust callers.
	(twittering-get-tweets): Set parameter `since_id' instead of
	`since' because twitter API had dropped support for `since'
	parameter on 2009-04-08.
	(twittering-http-get-default-sentinel): Modify the condition for
	if retrieving statuses is nil.
	(twittering-erase-old-statuses): Don't add parameter `since'.
	(twittering-status-to-status-datum): No longer use
	`twittering-timeline-last-update'.
	(twittering-get-and-render-timeline): Likewise.
	(twittering-timeline-last-update): Delete variable.
	(twittering-local-strftime, twittering-global-strftime): Delete
	functions.
	(twittering-setftime): Delete function.

	* twittering-mode.el (twittering-get-status-from-http-response):
	No longer make a reverse list.
	(twittering-http-get-default-sentinel): Adjust callers.

2010-02-12  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el
	(twittering-find-processes-for-timeline-spec): new function for
	finding processes retrieving a specific timeline spec.
	(twittering-remove-inactive-processes): new function for removing
	inactive processes from `twittering-process-info-alist'.
	(twittering-process-active-p): new function for checking whether
	the processes for a specific timeline spec are active or not.
	(twittering-get-and-render-timeline): use
	`twittering-process-active-p' instead of referring
	`twittering-process-info-alist' directly.

	* twittering-mode.el (twittering-http-get-default-sentinel): run
	`twittering-new-tweets-hook' even if the retrieval is
	non-interactive.

	* twittering-mode.el (twittering-timeline-data): removed.
	(twittering-current-timeline-spec): new function for the current
	timeline spec.
	(twittering-current-timeline-data): new function for the current
	timeline data.
	(twittering-remove-timeline-data): new function for clearing a